# design_patterns

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
chain_of_responsibility/: main.cpp
command/: command_demo.cpp  main.cpp  practical_demo.cpp
composite/: main.cpp
decorator/: main.cpp
facade/: main.cpp
flyweight/: flyweight.cc  main.cpp  readme.md
interpreter/: calculator_demo.cpp  main.cpp
iterator/: binary_tree_iterator.cpp  main.cpp
mediator/: main.cpp  mediator.cc
memento/: main.cpp
observer/: main.cpp  observer.cc  observer_new.cpp
prototype_pattern/: main.cc  prototype.cc
singleton/: lazy_singleton.cc  magic_static_singleton.cc  singleton.cc  singleton.py
src/builder/: builder_test.cc
src/command/: command_test.cc
src/composite/: composite_test.cc
src/decorator/: decorator.cc
src/facade/: facade.cc
src/interface_isolation_principle/: interface_isolation_principle_test.cc
src/interpreter/: interpreter.cc
src/iterator/: iterator.cc
src/liskov_principle/: liskov_principle_test.cc
src/mediator/: readme.md
src/memento/: memento.cc
src/observer/: observer.cc
src/open_close_principle/: open_close_principle_test.cc
src/state_pattern/: state.cc
src/strategy/: strategy.cc
src/visitor/: visitor.cc
state_pattern/: main.cpp  state_demo.cpp  state_table_demo.cpp
strategy/: main.cpp
template/: main.cpp  template_pattern.cc
uml/: design_patterns.mdj
visitor/: main.cpp
